Fix for bug #14304: auto_increment field incorrect set from within stored procedure (insert select).